# PicoScenes-PDK

./: .gitignore  Build-Settings.txt  CMakeLists.txt  CPack-AutoVersioning.cmake  CPack-Settings.cmake  CPack-Settings.txt  Fast_Build_Install_PicoScenes.sh  Fast_Build_Install_Plugin.sh  LICENSE  README.md  changelog.md  get_git_timestamp.bat  get_git_timestamp.sh  vcpkg.json
.github/workflows/: main.yml
chronos-plugin/: CMakeLists.txt  UnifiedChronos.h  UnifiedChronosInitiator.cpp  UnifiedChronosInitiator.h  UnifiedChronosParameters.cpp  UnifiedChronosParameters.h  UnifiedChronosPlugIn.cpp  UnifiedChronosPlugIn.h  UnifiedChronosResponder.cpp  UnifiedChronosResponder.h
echoprobe-plugin/: CMakeLists.txt  EchoProbeInitiator.cpp  EchoProbeInitiator.h  EchoProbeParameters.cpp  EchoProbeParameters.h  EchoProbePlugIn.cpp  EchoProbePlugIn.h  EchoProbeResponder.cpp  EchoProbeResponder.h
packaging/Ubuntu/: postinst  postrm
plugin-broadcaster/: CMakeLists.txt  RXSBroadcasterPlugIn.cpp  RXSBroadcasterPlugIn.h  RXSBroadcasterPlugin.cpp  RXSBroadcasterPlugin.h
plugin-demo/: CMakeLists.txt  DemoPlugIn.cpp  DemoPlugIn.h  DemoPlugin.cpp  DemoPlugin.cxx  DemoPlugin.h  DemoPlugin.hxx  EchoProbe.hxx  EchoProbeParameters.cxx  EchoProbeRequestSegment.cxx
plugin-echoprobe/: CMakeLists.txt  EchoProbe.h  EchoProbe.hxx  EchoProbeHeader.cxx  EchoProbeHeader.hxx  EchoProbeInitiator.cpp  EchoProbeInitiator.cxx  EchoProbeInitiator.h  EchoProbeInitiator.hxx  EchoProbeParameters.cpp  EchoProbeParameters.cxx  EchoProbeParameters.h  EchoProbeParameters.hxx  EchoProbePlugin.cpp  EchoProbePlugin.cxx  EchoProbePlugin.h  EchoProbePlugin.hxx  EchoProbeReplySegment.cxx  EchoProbeReplySegment.hxx  EchoProbeRequestSegment.cxx  EchoProbeRequestSegment.hxx  EchoProbeResponder.cpp  EchoProbeResponder.cxx  EchoProbeResponder.h  EchoProbeResponder.hxx  EchoProbeSegment.cxx  EchoProbeSegment.hxx
plugin-forwarder/: CMakeLists.txt  UDPBasedPacketForwarder.cpp  UDPBasedPacketForwarder.h  UDPForwarderPlugin.cxx  UDPForwarderPlugin.hxx  UDPForwardingHeader.hxx
plugin-genshin/: CMakeLists.txt  GenshinPlugin.cxx  GenshinPlugin.hxx
plugin-sllh/: CMakeLists.txt  ShenlilinhuaPlugin.cxx  ShenlilinhuaPlugin.hxx
rxs-broadcaster-plugin/: CMakeLists.txt  RXSBroadcasterPlugIn.cpp  RXSBroadcasterPlugIn.h
snap/: snapcraft.yaml
udp-remote-logger/: CMakeLists.txt  UDPRemoteLogger.cxx
